# web-library

./: .dockerignore  .gitattributes  Dockerfile  README.md  cnb.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
demo-data/: app.sqlite
demo-data/libraries/copy-0yf11s4swq/: source.json  zotero.sqlite
docs/: agentic-rag-design.md  agentic-rag-function-calling-design.md  agentic-rag-optimization-roadmap.md  ai-assisted-retrieval-review-guide.md  ai-candidate-scoring-implementation.md  data-mapping.md  openai-codex-agentic-rag-plan.md  rag-knowledge-base-schema.md  semantic-search.md  zotero-translators.md  多源异构检索功能实现说明.md  明暗主题功能设计方案.md  视觉设计规范.md
evals/agentic_rag/: README.md  eval-case.schema.json  smoke-v1.json  synthetic-corpus-v1.json
evals/agentic_rag/reports/: baseline-retrieval-v1.json  baseline-retrieval-v1.md
skills/agentic-rag/: SKILL.md
skills/agentic-rag/agents/: openai.yaml
skills/agentic-rag/references/: citation-format.md  retrieval-policy.md  tool-contract.md
skills/multi-source-retrieval/: SKILL.md
src/zotero_web_library/: agentic_rag_skill.py  app_store.py  citation_export.py  metadata_import.py  paths.py  rag_eval_cli.py  retrieval_cli.py  sources.py  web.py  writing.py  zotero_adapter.py
src/zotero_web_library/rag/: __init__.py  (+9 more)
tests/: conftest.py  test_agentic_rag_skill.py  test_citation_export.py  test_codex_agent.py  test_frontend_contract.py  test_metadata_import.py  test_rag.py  test_rag_agent.py  test_rag_evaluation.py  test_rag_phase1.py  test_retrieval.py  test_sources.py  test_writing.py  test_zotero_adapter.py
(+145 files in other folders)
